# atlas

./: .atlas_tui.json  .env.example  .gitignore  README.md  STRATEGY.md  pyproject.toml  strategy_spec.json
data/sample/: BTC-PERP_1min_sample.csv  ETH-PERP_1min_sample.csv  SPY_1min_sample.csv
scripts/: check_coinbase_products.py  eval_perp_hawk.py  gen_crypto_sample.py  generate_sample_data.py
src/atlas/: cli.py  config.py  logging_utils.py  market.py
src/atlas/backtest/: derivatives_engine.py  engine.py  metrics.py
src/atlas/broker/: alpaca_broker.py
src/atlas/coinbase/: client.py
src/atlas/data/: alpaca_data.py  bars.py  coinbase_data.py  csv_loader.py  universe.py
src/atlas/ml/: __init__.py  tune.py
src/atlas/paper/: runner.py
src/atlas/strategies/: base.py  basis_carry.py  ema_crossover.py  hedge_implementation.py  ma_crossover.py  nec_pdt.py  nec_x.py  no_trade.py  orb_trend.py  perp_flare.py  perp_hawk.py  perp_scalp.py  registry.py  spy_open_close.py
src/atlas/tui/: app.py
src/atlas/utils/: time.py
